gitops/policies/disallow-default-namespace.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-namespace
  annotations:
    policies.kyverno.io/title: Disallow default Namespace
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: low
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-namespace
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Using the default namespace is not allowed. Create a dedicated namespace for workloads.
        pattern:
          metadata:
            namespace: "!default"
